<resources>
    <string name="app_name">ParkingPlantilla</string>
    <string name="app_title">Park W\'Us</string>

    <!-- Pantalla de Login -->
    <string name="login_subtitle">Inicia sesión en tu cuenta</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="forgot_password">¿Has olvidado tu contraseña?</string>
    <string name="or_text">O</string>
    <string name="register_prompt">¿No tienes cuenta? Regístrate</string>

    <!-- Pantalla de Registro -->
    <string name="register_subtitle">Crea tu cuenta para comenzar</string>
    <string name="username_hint">Nombre de usuario</string>
    <string name="phone_hint">Teléfono</string>
    <string name="employee_id_hint">ID de Empleado</string>
    <string name="confirm_password_hint">Confirmar contraseña</string>
    <string name="register_button">Registrarse</string>
    <string name="login_prompt">¿Ya tienes cuenta? Inicia sesión</string>



    <string name="selectDate">Selecciona una fecha</string>

    <string name="fragment_main">Main</string>
    <string name="fragment_step1">Step 1</string>
    <string name="fragment_step2">Step 2</string>
    <string name="fragment_end">End</string>
    <string name="buscar">Buscar plazas libres</string>
    <string name="eliminar">Eliminar</string>
    <string-array name="plantas_array">
        <item>Planta 0</item>
        <item>Planta -1</item>
    </string-array>
    <string name="ver_plano">Ver plano</string>
    <string name="tipo_plaza_icono">Icono de tipo de plaza</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">964890008416-setgmce466db15ib4d8vuhv7sbe4ks8j.apps.googleusercontent.com.apps.googleusercontent.com</string>
</resources>